# google-ai-bot-demo

./: README.md  main.py  pyproject.toml
google_ai_bot_demo/: ai.py  utils.py
google_ai_bot_demo/bot/: bot.py  commands.py
